# Fast-Code-Competition

./: .clang-format  README.md
1v1/: README.md  TODO.txt
AmericanKamikazePilots/: CMakeCache.txt  CMakeLists.txt  Makefile  app1  app3  cmake_install.cmake  ofen1
AmericanKamikazePilots/src/: app0.cc  app1.cc  app2.cc  app3.cc  app4.cc
Quivering_Sharks/: CMakeCache.txt  CMakeLists.txt  Makefile  async  async.cpp  cmake_install.cmake  serial  serial.cpp
Reference/: async.cpp  async.out  build.sh  fmt.hpp  serial.cpp  serial.out
Reference/custom/: async.cpp  async.out  build.sh  fmt.hpp  serial.cpp  serial.out
Reference/custom/prototypes/: out.txt
Reference/stdonly/: async.cpp  async.out  serial.cpp  serial.out
async-io/: Note.md  README.md  async.cpp  async.py  benchmark.sh  serial_dumb.cpp  test.py  test.sh
async-io/d/: Makefile  async.d  async_putchar.d  async_putchar4.d  async_vibed.d  ctfe.d
async-io/python-awesomeness/: async.py  sync.py
async-io/solution/: main2.cpp
async-io/viz/: benchmark.sh  index.html  result.json
boris/: exec1.sh
boris/ffcSerial1/: ffcSerial1.sln
boris/ffcSerial1/ffcSerial1/: Program.cs  ffcSerial1.csproj
boris/ffcSerial1/ffcSerial1/Properties/: AssemblyInfo.cs
condvar/: async  serial
d/: Makefile  README.md  async_atomic.d  async_putchar.d  async_putchar2.d  async_queue.d  serial.d
ro/: async  main.cpp  serial
